# file-analyzer

./: .gitignore  .pylintrc  IMPROVEMENT_PLAN_REVISED.md  README.md  WINDOWS_SETUP.md  conftest.py  install.bat  pyproject.toml  pytest.ini  requirements.txt  run.bat  setup.py
documents/: application_context.md  claude_code_prompt.md  next_steps.md
src/: __init__.py  main.py
src/models/: __init__.py  file_system_model.py
src/ui/: __init__.py  directory_tree.py  file_table.py  main_window.py  visualization.py
src/ui/components/: __init__.py  card_widget.py  modern_button.py
src/ui/components/management/: __init__.py  management_dashboard.py
src/ui/components/management/models/: __init__.py  management_data.py
src/ui/components/management/services/: __init__.py  age_analysis_service.py  duplicate_service.py  large_file_service.py
src/ui/components/management/tools/: __init__.py  age_analyzer.py  duplicate_finder.py  large_file_analyzer.py
src/ui/components/management/workers/: __init__.py  analysis_workers.py
src/ui/components/themed/: __init__.py  themed_widgets.py
src/ui/components/visualization/: __init__.py  dashboard.py
src/ui/components/visualization/charts/: __init__.py  bar_chart.py  base_chart.py  pie_chart.py  tree_chart.py
src/ui/components/visualization/models/: __init__.py  chart_data.py
src/ui/components/visualization/services/: __init__.py  data_service.py
src/ui/themes/: __init__.py  chart_theming.py  design_system.py  icon_manager.py  styles.py  theme_manager.py  theme_provider.py
src/utils/: __init__.py  file_utils.py  logger.py  settings.py
tests/: README.md  __init__.py  test_file_utils.py  test_gui.py
tests/integration/: test_file_analysis_workflow.py  test_gui.py  test_main_window_integration.py
tests/unit/: test_design_system.py  test_file_system_model.py  test_file_utils.py  test_logger.py  test_settings.py  test_theme_manager.py
tests/visual/: __init__.py  conftest.py  test_ui_visual_regression.py
