[project]
name = "fileanalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "isort>=6.0.1",
    "pathlib==1.0.1",
    "pyqt6==6.8.1",
    "pyqt6-qt6==6.8.2",
    "pyqt6-sip==13.10.0",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
